--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,6 @@ h1 {
   transition: 0.3s;
 }
 
-
 ul.aside {
   list-style: none;
   display: inline-flex;
@@ -240,18 +239,32 @@ ul li.category.active::after {
 
 /* FORM */
 .fact-form {
-  background-color: #fff;
+  /* background-color: #fff; */
   margin-bottom: 40px;
-  padding: 4px 8px;
+  padding: 4px 0px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   gap: 16px;
   border-radius: 4px;
 }
 
+.fact-section {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: center;
+}
+
+.alt-section {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: center;
+}
+
 .fact-form input,
 .fact-form select {
-  width: 160px;
+  width: 100%;
   background-color: #fff;
   border: none;
   border-radius: 4px;
@@ -259,6 +272,7 @@ ul li.category.active::after {
   font-size: 16px;
   color: inherit;
   font-family: inherit;
+  border: 2px solid #fff;
 }
 
 .fact-form input::placeholder {
