--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,11 @@ body {
   gap: 36px;
 }
 
+.main-blur,
+.header-blur {
+  filter: blur(3px);
+}
+
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
@@ -210,8 +215,10 @@ ul li.category.active::after {
 }
 
 .btn.submit {
-  font-size: 16px;
+  width: 100px;
+  font-size: 6px;
   padding: 5px 5px;
+  margin: 0px 6px;
 }
 
 .btn-all-categories {
@@ -239,6 +246,51 @@ ul li.category.active::after {
 }
 
 /* FORM */
+
+.modal-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  transition: 1s;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  max-width: 800px;
+  width: 100%;
+}
+
+.modal-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.btn-close {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  color: #252525;
+}
+
+.modal-head h2,
+.btn-close {
+  margin-bottom: 10px;
+}
+
 .fact-form {
   margin-bottom: 40px;
   padding: 4px 0px;
@@ -288,7 +340,10 @@ ul li.category.active::after {
   color: #717171;
   font-weight: 500;
   font-size: 16px;
-  margin-right: 18px;
+  margin: 0;
+  padding: 0;
+  width: 66px;
+  margin-left: 4px;
 }
 
 input[type="text"]:focus,
